--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walkuere",
-  "version": "1.0.6",
+  "version": "1.0.7-0",
   "description": "walkuere",
   "main": "lib/index.js",
   "scripts": {
