--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "graphql": "^0.11.7",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^2.7.2",
+    "history": "^4.7.2",
     "immutable": "^3.8.2",
     "react": "^16.0.0",
     "react-apollo": "^2.0.0",
@@ -47,7 +48,8 @@
     "react-router-redux": "^5.0.0-alpha.7",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "walkuere": "^1.0.7-0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
