--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walkuere",
-  "version": "1.0.7-1",
+  "version": "1.0.7-4",
   "description": "walkuere",
   "main": "lib/index.js",
   "scripts": {
@@ -72,7 +72,8 @@
     "prettier": "^1.8.1",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.3.0"
+    "redux-devtools-log-monitor": "^1.3.0",
+    "ws": "^3.3.1"
   },
   "babel": {
     "presets": [
