--- a/package.json
+++ b/package.json
@@ -40,16 +40,15 @@
     "graphql-tools": "^2.7.2",
     "history": "^4.7.2",
     "immutable": "^3.8.2",
-    "react": "^16.0.0",
-    "react-apollo": "^2.0.0",
-    "react-dom": "^16.0.0",
+    "react": "^16.1.0",
+    "react-apollo": "^2.0.1",
+    "react-dom": "^16.1.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.7",
     "redux": "^3.7.2",
     "redux-immutable": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "walkuere": "^1.0.7-0"
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -64,12 +63,12 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-flowtype": "^2.35.0",
-    "eslint-plugin-graphql": "^1.4.0-1",
+    "eslint-plugin-graphql": "^1.4.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.1.0",
-    "prettier": "^1.8.1",
+    "prettier": "^1.8.2",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
