--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/limaofeng/hermes.git"
+    "url": "git+https://github.com/limaofeng/walkuere.git"
   },
   "engines": {
     "node": ">= 6.9.0",
