travis.yml 添加 before_deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,12 @@ install:
 script:
   - yarn build
 
+before_deploy:
+  - yarn build
+
 deploy:
   provider: npm
   email: "limaofeng@msn.com"
-  script:
-    - yarn build
   api_key: $NPM_TOKEN
   on:
     tags: true
