--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,9 @@ install:
 script:
   - yarn build
 
-before_deploy: yarn build && ls
+before_deploy:
+  - yarn build
+  - ls
 
 deploy:
   provider: npm
