--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ script:
   - yarn build
 
 before_deploy:
-  - yarn build
-  - ls
+  script:
+    - yarn build
+    - ls
+  skip_cleanup: true
 
 deploy:
   provider: npm
