--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,10 @@ before_deploy:
   - yarn build
   - ls
 
+addons:
+  artifacts:
+    working_dir: lib
+
 deploy:
   provider: npm
   email: "limaofeng@msn.com"
