--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,15 @@ before_deploy:
   - yarn build
   - ls
 
+addons:
+
 deploy:
-  skip_cleanup: true
   provider: npm
   email: "limaofeng@msn.com"
   api_key: $NPM_TOKEN
+  skip_cleanup: true
   on:
     tags: true
+
+after_deploy:
+  - ls
