--- a/package.json
+++ b/package.json
@@ -25,6 +25,31 @@
     "url": "https://github.com/limaofeng/hermes/issues"
   },
   "homepage": "https://github.com/limaofeng/hermes#readme",
+  "peerDependencies": {
+    "apollo-cache-inmemory": "^1.1.0",
+    "apollo-client": "^2.0.2",
+    "apollo-fetch": "^0.6.0",
+    "apollo-link": "^1.0.0",
+    "apollo-link-batch-http": "^1.0.0",
+    "apollo-link-error": "^1.0.0",
+    "apollo-link-http": "^1.1.0",
+    "apollo-link-ws": "^1.0.0",
+    "apollo-logger": "^0.1.1",
+    "graphql": "^0.11.7",
+    "graphql-tag": "^2.5.0",
+    "graphql-tools": "^2.7.2",
+    "history": "^4.7.2",
+    "immutable": "^3.8.2",
+    "react": "^16.1.1",
+    "react-apollo": "^2.0.1",
+    "react-dom": "^16.1.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.7",
+    "redux": "^3.7.2",
+    "redux-immutable": "^4.0.0",
+    "redux-thunk": "^2.2.0"
+  },
   "dependencies": {
     "apollo-cache-inmemory": "^1.1.0",
     "apollo-client": "^2.0.2",
@@ -59,7 +84,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "eslint": "^4.10.0",
+    "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-flowtype": "^2.35.0",
@@ -69,8 +94,8 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.1.0",
     "prettier": "^1.8.2",
-    "redux-devtools": "^3.4.0",
-    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools": "^3.4.1",
+    "redux-devtools-dock-monitor": "^1.4.0",
     "redux-devtools-log-monitor": "^1.3.0",
     "ws": "^3.3.1"
   },
