--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "subscriptions-transport-ws": "^0.9.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
