--- a/package.json
+++ b/package.json
@@ -26,57 +26,58 @@
   },
   "homepage": "https://github.com/limaofeng/hermes#readme",
   "peerDependencies": {
-    "apollo-client": "^2.0.3",
-    "graphql": "^0.11.7",
-    "react": "^16.1.1",
+    "apollo-client": "^2.3.1",
+    "graphql": "^0.13.2",
+    "react": "^16.3.2",
     "react-router-dom": "^4.2.2",
-    "redux": "^3.7.2"
+    "redux": "^4.0.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.1.9",
-    "apollo-client": "^2.2.5",
-    "apollo-fetch": "^0.7.0",
-    "apollo-link": "^1.2.1",
-    "apollo-link-batch-http": "^1.2.1",
-    "apollo-link-error": "^1.0.7",
-    "apollo-link-http": "^1.5.3",
-    "apollo-link-ws": "^1.0.7",
-    "apollo-logger": "^0.1.1",
-    "graphql": "^0.13.1",
-    "graphql-tag": "^2.8.0",
-    "graphql-tools": "^2.21.0",
+    "apollo-cache-inmemory": "^1.2.1",
+    "apollo-client": "^2.3.1",
+    "apollo-link": "^1.2.2",
+    "apollo-link-batch-http": "^1.2.2",
+    "apollo-link-context": "^1.0.8",
+    "apollo-link-error": "^1.0.9",
+    "apollo-link-http": "^1.5.4",
+    "apollo-link-ws": "^1.0.8",
+    "apollo-logger": "^0.3.0",
+    "graphql": "^0.13.2",
+    "graphql-tag": "^2.9.2",
+    "graphql-tools": "^3.0.1",
     "history": "^4.7.2",
-    "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.2",
+    "react-apollo": "^2.1.4",
+    "react-dom": "^16.3.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
-    "redux": "^3.7.2",
+    "redux": "^4.0.0",
     "redux-thunk": "^2.2.0",
-    "subscriptions-transport-ws": "^0.9.6"
+    "subscriptions-transport-ws": "^0.9.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-inline-import": "^2.0.6",
     "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-3": "^6.24.1",
-    "eslint": "^4.18.2",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-loader": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.46.1",
-    "eslint-plugin-graphql": "^1.5.0",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.46.3",
+    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.7.0",
-    "prettier": "^1.11.1",
+    "eslint-plugin-react": "^7.8.2",
+    "node-fetch": "^2.1.2",
+    "prettier": "^1.12.1",
     "redux-devtools": "^3.4.1",
-    "ws": "^4.1.0"
+    "ws": "^5.1.1"
   },
   "prettier": {
     "tabWidth": 2,
