--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "walkuere",
   "main": "lib/index.js",
   "scripts": {
-    "build": "babel src -d lib",
-    "test": "node test/run"
+    "build": "tsc",
+    "test": "node test/run",
+    "precommit": "lint-staged"
   },
   "repository": {
     "type": "git",
@@ -26,68 +27,65 @@
   },
   "homepage": "https://github.com/limaofeng/hermes#readme",
   "peerDependencies": {
-    "apollo-client": "^2.3.1",
-    "graphql": "^0.13.2",
-    "react": "^16.3.2",
-    "react-router-dom": "^4.2.2",
+    "apollo-client": "^2.3.5",
+    "graphql": "^14.0.0-rc.2",
+    "react": "^16.4.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.2.1",
-    "apollo-client": "^2.3.1",
-    "apollo-link": "^1.2.2",
+    "apollo-cache-inmemory": "^1.2.5",
+    "apollo-client": "^2.3.5",
     "apollo-link-batch-http": "^1.2.2",
     "apollo-link-context": "^1.0.8",
-    "apollo-link-error": "^1.0.9",
-    "apollo-link-http": "^1.5.4",
+    "apollo-link-error": "^1.1.0",
     "apollo-link-ws": "^1.0.8",
-    "apollo-logger": "^0.3.0",
-    "graphql": "^0.13.2",
+    "connected-react-router": "^4.3.0",
+    "graphql": "^14.0.0-rc.2",
     "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.1",
+    "graphql-tools": "^3.0.5",
     "history": "^4.7.2",
-    "react": "^16.3.2",
-    "react-apollo": "^2.1.4",
-    "react-dom": "^16.3.2",
+    "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.2.0",
-    "subscriptions-transport-ws": "^0.9.9"
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.3.0",
+    "subscriptions-transport-ws": "^0.9.12"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-inline-import": "^2.0.6",
-    "babel-plugin-transform-flow-strip-types": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.46.3",
-    "eslint-plugin-graphql": "^2.1.1",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-react": "^7.8.2",
+    "@types/lodash": "^4.14.112",
+    "@types/prop-types": "^15.5.3",
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-redux": "^6.0.4",
+    "@types/react-router-dom": "^4.3.0",
+    "@types/redux-logger": "^3.0.6",
+    "@types/redux-persist": "^4.3.1",
+    "@types/redux-saga": "^0.10.5",
+    "@types/ws": "^5.1.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.0",
     "node-fetch": "^2.1.2",
     "prettier": "^1.12.1",
-    "redux-devtools": "^3.4.1",
-    "ws": "^5.1.1"
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "printWidth": 120,
-    "singleQuote": true
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0",
+    "tslint-react": "^3.6.0",
+    "ws": "^6.0.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,graphql}": [
       "prettier --write",
       "git add"
     ]
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "printWidth": 120,
+    "singleQuote": true
   }
 }
