--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "tslint-react": "^3.6.0",
+    "typescript": "^2.9.2",
     "ws": "^6.0.0"
   },
   "lint-staged": {
