--- a/package.json
+++ b/package.json
@@ -2,10 +2,16 @@
   "name": "walkuere",
   "version": "1.0.18",
   "description": "walkuere",
-  "main": "lib/index.js",
+  "main": "./dist/index.js",
+  "typings": "./lib/index.d.ts",
   "scripts": {
-    "build": "tsc",
-    "test": "node test/run",
+    "build": "webpack --mode production",
+    "build:lib": "babel src --out-dir lib",
+    "build:umd": "webpack --config webpack.config.js --output-filename index.js --mode development",
+    "build:umd:min": "webpack --config webpack.config.js --output-filename index.min.js  --mode production",
+    "clean": "rimraf lib dist",
+    "prepublish": "npm run clean && npm run build",
+    "test": "jest",
     "precommit": "lint-staged"
   },
   "repository": {
@@ -47,11 +53,11 @@
     "history": "^4.7.2",
     "react": "^16.4.1",
     "react-apollo": "^2.1.9",
-    "react-dom": "^16.4.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
@@ -61,7 +67,6 @@
     "@types/lodash": "^4.14.112",
     "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.6",
-    "@types/react-dom": "^16.0.6",
     "@types/react-redux": "^6.0.4",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux-logger": "^3.0.6",
@@ -72,10 +77,13 @@
     "lint-staged": "^7.2.0",
     "node-fetch": "^2.1.2",
     "prettier": "^1.12.1",
+    "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
     "tslint-react": "^3.6.0",
     "typescript": "^2.9.2",
+    "webpack": "^4.16.1",
+    "webpack-cli": "^3.1.0",
     "ws": "^6.0.0"
   },
   "lint-staged": {
