--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "subscriptions-transport-ws": "^0.9.12"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.0",
     "@types/lodash": "^4.14.112",
     "@types/prop-types": "^15.5.3",
     "@types/react": "^16.4.6",
@@ -74,9 +75,11 @@
     "@types/redux-saga": "^0.10.5",
     "@types/ws": "^5.1.2",
     "husky": "^0.14.3",
+    "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
     "node-fetch": "^2.1.2",
     "prettier": "^1.12.1",
+    "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.14.0",
@@ -87,7 +90,7 @@
     "ws": "^6.0.0"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,graphql}": [
+    "src/**/*.{ts,tsx,graphql}": [
       "prettier --write",
       "git add"
     ]
@@ -96,5 +99,26 @@
     "tabWidth": 2,
     "printWidth": 120,
     "singleQuote": true
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "tsconfig.json"
+      }
+    },
+    "setupFiles": [
+      "<rootDir>/config/jest/setupTests.js"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "js"
+    ],
+    "transform": {
+      "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
+    },
+    "testMatch": [
+      "<rootDir>/tests/**/*.test.(ts|js)"
+    ],
+    "testEnvironment": "node"
   }
 }
