--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "author": "limaofeng@msn.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/limaofeng/hermes/issues"
+    "url": "https://github.com/limaofeng/walkuere/issues"
   },
-  "homepage": "https://github.com/limaofeng/hermes#readme",
+  "homepage": "https://github.com/limaofeng/walkuere#readme",
   "peerDependencies": {
     "apollo-client": "^2.3.5",
     "graphql": "^14.0.0-rc.2",
@@ -77,8 +77,8 @@
     "husky": "^0.14.3",
     "jest": "^23.4.1",
     "lint-staged": "^7.2.0",
-    "node-fetch": "^2.1.2",
-    "prettier": "^1.12.1",
+    "node-fetch": "^2.2.0",
+    "prettier": "^1.13.7",
     "ts-jest": "^23.0.1",
     "ts-loader": "^4.4.2",
     "tslint": "^5.11.0",
