--- a/package.json
+++ b/package.json
@@ -1,124 +1,18 @@
 {
-  "name": "walkuere",
-  "version": "1.1.0",
-  "description": "walkuere",
-  "main": "./dist/index.js",
-  "typings": "./lib/index.d.ts",
+  "name": "root",
+  "private": true,
   "scripts": {
-    "build": "npm run build:lib && npm run build:umd && npm run build:umd:min",
-    "build:lib": "tsc",
-    "build:umd": "webpack --config webpack.config.js --output-filename index.js --mode development",
-    "build:umd:min": "webpack --config webpack.config.js --output-filename index.min.js  --mode production",
-    "clean": "rimraf lib dist",
-    "prepublish": "npm run clean && npm run build",
-    "test": "jest",
     "precommit": "lint-staged"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/limaofeng/walkuere.git"
-  },
-  "engines": {
-    "node": ">= 6.9.0",
-    "npm": ">= 3.0.0"
-  },
-  "keywords": [
-    "redux",
-    "graphql"
-  ],
-  "author": "limaofeng@msn.com",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/limaofeng/walkuere/issues"
-  },
-  "homepage": "https://github.com/limaofeng/walkuere#readme",
-  "peerDependencies": {
-    "apollo-client": "^2.3.5",
-    "graphql": "^14.0.0-rc.2",
-    "react": "^16.4.1",
-    "react-router-dom": "^4.3.1",
-    "redux": "^4.0.0"
-  },
-  "dependencies": {
-    "apollo-cache-inmemory": "^1.2.5",
-    "apollo-client": "^2.3.5",
-    "apollo-link-batch-http": "^1.2.2",
-    "apollo-link-context": "^1.0.8",
-    "apollo-link-error": "^1.1.0",
-    "apollo-link-ws": "^1.0.8",
-    "connected-react-router": "^4.3.0",
-    "graphql": "^14.0.0-rc.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.5",
-    "history": "^4.7.2",
-    "react": "^16.4.1",
-    "react-apollo": "^2.1.9",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^4.0.0",
-    "redux-logger": "^3.0.6",
-    "redux-persist": "^5.10.0",
-    "redux-saga": "^0.16.0",
-    "redux-thunk": "^2.3.0",
-    "subscriptions-transport-ws": "^0.9.13"
-  },
   "devDependencies": {
-    "@types/jest": "^23.3.0",
-    "@types/lodash": "^4.14.113",
-    "@types/prop-types": "^15.5.4",
-    "@types/react": "^16.4.7",
-    "@types/react-redux": "^6.0.5",
-    "@types/react-router-dom": "^4.3.0",
-    "@types/redux-logger": "^3.0.6",
-    "@types/redux-persist": "^4.3.1",
-    "@types/redux-saga": "^0.10.5",
-    "@types/ws": "^5.1.2",
+    "lerna": "^3.0.0-rc.0",
     "husky": "^0.14.3",
-    "jest": "^23.4.1",
-    "lint-staged": "^7.2.0",
-    "node-fetch": "^2.2.0",
-    "prettier": "^1.13.7",
-    "ts-jest": "^23.0.1",
-    "ts-loader": "^4.4.2",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
-    "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.16.2",
-    "webpack-cli": "^3.1.0",
-    "ws": "^6.0.0"
+    "lint-staged": "^7.2.0"
   },
   "lint-staged": {
-    "src/**/*.{ts,tsx,graphql}": [
+    "packages/*/src/**/*.{ts,tsx,graphql}": [
       "prettier --write",
       "git add"
     ]
-  },
-  "prettier": {
-    "tabWidth": 2,
-    "printWidth": 120,
-    "singleQuote": true
-  },
-  "jest": {
-    "globals": {
-      "ts-jest": {
-        "tsConfigFile": "tsconfig.json"
-      }
-    },
-    "setupFiles": [
-      "<rootDir>/config/jest/setupTests.js"
-    ],
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts|tsx)$": "./node_modules/ts-jest/preprocessor.js"
-    },
-    "testMatch": [
-      "<rootDir>/tests/**/*.test.(ts|js)"
-    ],
-    "testEnvironment": "node"
   }
 }
