--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "precommit": "lint-staged"
   },
   "devDependencies": {
-    "lerna": "^3.0.0-rc.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0"
+    "husky": "^1.3.1",
+    "lerna": "^3.10.7",
+    "lint-staged": "^8.1.0"
   },
   "lint-staged": {
     "packages/*/src/**/*.{ts,tsx,graphql}": [
