--- a/packages/walkuere-core/package.json
+++ b/packages/walkuere-core/package.json
@@ -32,56 +32,56 @@
   },
   "homepage": "https://github.com/limaofeng/walkuere#readme",
   "peerDependencies": {
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1"
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0"
   },
   "dependencies": {
-    "apollo-cache-inmemory": "^1.3.0-beta.6",
-    "apollo-client": "^2.3.7",
-    "apollo-link-batch-http": "^1.2.2",
-    "apollo-link-context": "^1.0.8",
-    "apollo-link-error": "^1.1.0",
-    "apollo-link-ws": "^1.0.8",
-    "graphql": "^14.0.0-rc.2",
-    "graphql-tag": "^2.9.2",
-    "graphql-tools": "^3.0.5",
+    "apollo-cache-inmemory": "^1.4.2",
+    "apollo-client": "^2.4.12",
+    "apollo-link-batch-http": "^1.2.6",
+    "apollo-link-context": "^1.0.12",
+    "apollo-link-error": "^1.1.5",
+    "apollo-link-ws": "^1.0.12",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
     "history": "^4.7.2",
     "invariant": "^2.2.4",
-    "react": "^16.4.1",
-    "react-apollo": "^2.1.9",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
+    "react": "^16.7.0",
+    "react-apollo": "^2.4.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
-    "redux-saga": "^0.16.0",
+    "redux-saga": "^1.0.0",
     "redux-thunk": "^2.3.0",
-    "subscriptions-transport-ws": "^0.9.14",
-    "warning": "^4.0.1"
+    "subscriptions-transport-ws": "^0.9.15",
+    "warning": "^4.0.2"
   },
   "devDependencies": {
     "@types/invariant": "^2.2.29",
-    "@types/jest": "^23.3.1",
-    "@types/lodash": "^4.14.115",
-    "@types/prop-types": "^15.5.4",
-    "@types/react": "^16.4.7",
-    "@types/react-redux": "^6.0.5",
+    "@types/jest": "^23.3.13",
+    "@types/lodash": "^4.14.120",
+    "@types/prop-types": "^15.5.8",
+    "@types/react": "^16.7.20",
+    "@types/react-redux": "^7.0.1",
     "@types/redux-logger": "^3.0.6",
     "@types/redux-persist": "^4.3.1",
     "@types/redux-saga": "^0.10.5",
     "@types/warning": "^3.0.0",
-    "@types/ws": "^5.1.2",
-    "jest": "^23.4.2",
-    "node-fetch": "^2.2.0",
-    "prettier": "^1.13.7",
-    "ts-jest": "^23.0.1",
-    "ts-loader": "^4.4.2",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.14.0",
+    "@types/ws": "^6.0.1",
+    "jest": "^24.0.0",
+    "node-fetch": "^2.3.0",
+    "prettier": "^1.16.1",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.16.3",
-    "webpack-cli": "^3.1.0",
-    "ws": "^6.0.0"
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1",
+    "ws": "^6.1.3"
   },
   "prettier": {
     "tabWidth": 2,
