--- a/packages/walkuere-core/package.json
+++ b/packages/walkuere-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walkuere-core",
-  "version": "1.1.16",
+  "version": "1.1.17",
   "description": "Walkuere Core",
   "main": "./dist/index.js",
   "typings": "./lib/index.d.ts",
@@ -59,6 +59,7 @@
     "warning": "^4.0.2"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.5",
     "@types/invariant": "^2.2.29",
     "@types/jest": "^23.3.13",
     "@types/lodash": "^4.14.120",
