--- a/packages/walkuere-rn/package.json
+++ b/packages/walkuere-rn/package.json
@@ -1,6 +1,6 @@
 {
   "name": "walkuere-rn",
-  "version": "1.1.16",
+  "version": "1.1.17",
   "description": "walkuere-react-native",
   "main": "./dist/index.js",
   "typings": "./lib/index.d.ts",
@@ -57,9 +57,10 @@
     "redux-saga": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.15",
-    "walkuere-core": "^1.1.16"
+    "walkuere-core": "^1.1.17"
   },
   "devDependencies": {
+    "@types/graphql": "^14.0.5",
     "@types/jest": "^23.3.1",
     "@types/lodash": "^4.14.115",
     "@types/prop-types": "^15.5.4",
