--- a/packages/walkuere/package.json
+++ b/packages/walkuere/package.json
@@ -1,9 +1,13 @@
 {
   "name": "walkuere",
-  "version": "1.1.17",
+  "version": "1.1.18",
   "description": "walkuere",
   "main": "./dist/index.js",
   "typings": "./lib/index.d.ts",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "scripts": {
     "build": "npm run build:lib && npm run build:umd && npm run build:umd:min",
     "build:lib": "tsc",
@@ -53,7 +57,7 @@
     "redux-saga": "^1.0.0",
     "redux-thunk": "^2.3.0",
     "subscriptions-transport-ws": "^0.9.15",
-    "walkuere-core": "^1.1.17"
+    "walkuere-core": "^1.1.18"
   },
   "devDependencies": {
     "@types/graphql": "^14.0.5",
