--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "scripts": {
     "precommit": "lint-staged"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "devDependencies": {
     "husky": "^1.3.1",
     "lerna": "^3.10.7",
